# pywhill

./: .gitignore  pyproject.toml
example/: cr_example4_blink_power.py
example/chintaka/: img_saitan.py  img_saitan2.py  same_distance.py  same_distance2.py  same_distance3.py
experiment/: RANSAC_ROI.py  RANSAC_accuracy.py  RANSAC_fps.py  RANSAC_matrix.py  RSS_accuracy.py  RSS_fps.py  RSS_matrix.py  count.py  increase.py  precision_evaluate.py  rename.py  score.py
implementation/: automatic_wheel.py  course_correction.py  course_correction_v2.py  go_straight.py  mayoko.py  min_dg.py  process.md  saitannkyori.py  steering.py  straight_turn.py  straight_turn2.py  straight_turn3.py  straight_turn4.py  straight_turn5.py  straight_turn6.py  straight_turn7.py  time_sum.py
kouki/: analyze_sides.py  in_out.py  in_out_v1.py  in_out_v2.py  incorse.py  incorze.py  inout_video.py  kensyou.py  kiken.py  kiken_v1.py  sennkaimade.py  turn_stop.py  turn_time.py
my_research/: cr.txt  cr_move.py  direct_GPT.py  direct_GPT_v2.py  direct_GPT_v2_video.py  direct_GPT_v2_video_fps.py  direct_GPT_v3.py  direct_GPT_v3_video.py  direct_GPT_v3_video_fps.py  distribute_score.py  dualfish_yolo.py  inlier.py  inlier.txt  labeling.py  realtime_yolo.py  webcam.py  wheel_distance.py  wheel_distance_v2_video.py
my_research/distribute/frame/: count.txt  score_results.csv
my_research/logs/kakukaku/: log_mavg_20250708_124125.csv  log_mavg_20250708_124234.csv  log_mavg_20250708_124407.csv  log_mavg_20250708_124514.csv  log_mavg_20250708_124811.csv  (+17 more)
saisin/: maeda.py  maeda_directri.py  syoumenn.py
(+1 files in other folders)
