[tool.poetry]
name = "whill-SDK"
version = "1.2.0"
description = "WHILL Model CR SDK for Python"
authors = ["Seiya Shimizu <seiya.shimizu@whill.inc>"]
license = "MIT"
homepage = "https://whill.inc/jp/model-cr"
repository = "https://github.com/WHILL/pywhill"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pyserial = "^3.5"
whill = {git = "https://github.com/WHILL/pywhill.git"}
readchar = "^4.2.1"
opencv-python = "^4.11.0.86"
scikit-learn = "^1.7.0"
graphviz = "^0.21"

[tool.poetry.dev-dependencies]
pyserial = "^3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
